Fixed background image not showing when implemented through a class.

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ div.card {
 }
 
 .background-image {
-	background-image: url('images/background.jpg');
-	height: 100vh;
+	background-image: url('../images/background.jpg');
+	/* height: 100vh; */
 	/* width: 100vw; */
 	background-attachment: fixed;
 	background-size: cover;
